2012-05-21 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/memory.c,
	  src/z80/gen.c,
	  src/port.h,
	  src/SDCCglue.c,
	  src/z80/main.c,
	  src/z80/peep.c:
	  Use lsidr for built-in memset() for r3ka.
	* src/hc08/gen.c:
	  Use ldhx, sthx for memory-to-memory assignment and cast.
	* src/hc08/peeph.def:
	  Basic tail call optimization.

2012-05-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/hc08/gen.c:
	  More efficient loading of H and HX for hc08 and s08.

2012-05-21 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/setjmp.c:
	  Enable test for r3ka.
	* support/regression/tests/gcc-torture-execute-pr28982a.c,
	  support/regression/tests/gcc-torture-execute-20010224-1.c,
	  support/regression/tests/gcc-torture-execute-20030408-1.c:
	  Disable tests for r3ka.
	* support/regression/Makefile.in:
	  Add ucr3ka target to z80 target.

2012-05-21 Leland Morrison <enigmalee AT sourceforge.net>

	* SDCCpeeph.c, peep.c: Fixed so that R2K instructions are
	  recognized for -mr3ka target by the peephole optimizer.

2012-05-20 Leland Morrison <enigmalee AT sourceforge.net>

	* support/regression/Makefile.in, support/regression/ports/ucr3ka/*,
	  support/regression/fwk/include/testfwk.h: added test-ucr3ka to
	  run regression tests on the rabbit 3000A port

2012-05-20 Leland Morrison <enigmalee AT sourceforge.net>

	* device/include/sdcc-lib.h, device/include/math.h: Added conditional
	  for rabbit 3000
	* devince/include/asm/r3ka/features.h: Added to allow customizations
	  for -mr3ka

2012-05-20 Leland Morrison <enigmalee AT sourceforge.net>

	* src/sdas/asrab/rabbitpst.c: Added mnemonics for rabbit 3000A
	* src/sdas/asrab/rabbitmch.c: Added .r3k flag and rabbit 3000A
	  instructions, changed much of the indentation to make gnu style,
	  and update two functions declarations from K&R style
	* src/sdas/asrab/rabbit.h: Added constants for rabbit 3000 support

2012-05-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/hc08/gen.c: